# soccerRobotFramework

./: CMakeLists.txt  main.cpp  readme.md  roadmap.md  test.cpp
src/: agent.cpp  types.h
src/agent/: agent.cpp  agent.h  agent.test.h  agentmessaging.h  base_agent.h  iagent.h
src/agent/agent_messaging/: agent_messaging.h  agent_messaging.test.h
src/agent/pool/: pool.h  pool.test.h
src/eventhandler/: eventhandler.h  eventhandler.test.h
src/id/: id.h  id.test.h
src/messaging/: event.h  mailbox.cpp  mailbox.h  priority.cpp  priority.h
src/messaging/backend/: backend.testutils.h
src/messaging/backend/in_memory/: in_memory_backend.h  in_memory_backend.test.h
src/messaging/backend/zmq/: zmq.h  zmq_backend.h  zmq_backend.test.h
src/messaging/event/: base_event.h  baseevent.h  event.h  event.test.h  subscribtion_key.h
src/messaging/eventlistener/: eventlistener.cpp
src/messaging/mailbox/: mailbox.cpp  mailbox.h  mailbox.test.h
src/messaging/priority/: priority.cpp  priority.h  priority.test.h
